# DocxFactory

./: CHANGELOG.md  CMakeLists.txt  COMPILING.md  README.md  conanfile.py
docs/python/: README.md  api-reference.md  installation.md  troubleshooting.md  tutorial-hello-world.md
examples/python/hello_world/: README.md  input_test_template.docx  payload.xml  run_hello_world.py
include/DocxFactory/WordProcessingCompiler/: dfwc.h
include/DocxFactory/WordProcessingMerger/: dfw.h
include/DocxFactory/console/: getopt.h
include/DocxFactory/unix/: UnixFunc.h
include/DocxFactory/util/: DocxFactoryDefs.h
include/DocxFactory/zip/: FileInfo.h  UnzipFile.h  ZipFile.h  ZipFunc.h
python/: DocxFactory.i
src/ConverterPrinter/: ConverterPrinter.cpp
src/DocxCompiler/: DocxCompilerBarcodeField.cpp
src/DocxMerger/: DocxMergerField.cpp  DocxMergerFile.cpp  DocxMergerId.cpp  DocxMergerItem.cpp  DocxMergerItemFile.cpp  DocxMergerItemGroup.cpp  DocxMergerItemLayout.cpp  DocxMergerSettingsFile.cpp  DocxMergerXmlString.cpp
src/WordProcessingMerger/: word-processing-merger.cpp
src/barcode/: BarcodeFunc.cpp
src/console/: getopt.c
src/locale/: LocaleFunc.cpp
src/opc/: OpcImageFile.cpp
src/os/: OsFunc.cpp
src/unix/: UnixFunc.cpp
src/xml/: XmlFunc.cpp
src/zip/: UnzipFile.cpp
